--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "neo-package",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Neo Package",
   "main": "index.js",
   "type": "module",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
